--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,23 @@
 # Tmux for mere mortals: https://zserge.com/posts/tmux/
 # gitmux: https://github.com/arl/gitmux
 
+
+
+# Create new panes and windows with current path
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind-key -n "M-'" split-window -h -c "#{pane_current_path}"
+bind-key -n M-/ split-window -v -c "#{pane_current_path}"
+bind-key -n M-n new-window -c "#{pane_current_path}"
+bind-key -n M-N new-session -c "#{pane_current_path}"
+
+# Quick view of processes
+bind-key P split-window -h 'exec htop'
+# Help screen: rebind list-keys window into a new pane
+bind-key ? split-window -h 'exec tmux list-keys | less'
+
+
 # syntax highlighting in Vim
 set -g default-terminal "screen-256color"
 # increase history limit
@@ -15,15 +32,12 @@ set-option -g renumber-windows on
 # This helps when exiting insert mode in Vim: http://superuser.com/a/252717/65504
 set -s escape-time 50
 
-# # Copy to clipboard macOS
-# bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-# bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+# Copy to clipboard macOS
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 
 # enable for iTerm (Terminal.app doesn't have mouse support)
 set -g mouse on
-
-
-bind-key C split-window -h -c "#{pane_current_path}"
 
 set-option -g status-position top
 
@@ -36,8 +50,7 @@ set-option -g set-titles on
 set-option -g set-titles-string 'tmux - #W'
 set -g bell-action any
 set-option -g visual-bell off
-
-# set-option -g set-clipboard off
+set-option -g set-clipboard off
 setw -g mode-keys vi
 setw -g monitor-activity on
 set -g visual-activity on
@@ -53,45 +66,44 @@ set -g status-interval 1
 # setw -g window-status-current-format ' #{?#{==:#W,#{b:SHELL}},#{b:pane_current_path},#W} '
 # setw -g window-status-format ' #{?#{==:#W,#{b:SHELL}},#{b:pane_current_path},#W} '
 
-
-set -s set-clipboard on
 # disable programs changing window names via terminal escape sequence
 # set-window-option -g allow-rename off
 
-# status bar
-set -g status-style fg=colour8,bg=colour234
-# current session
-set -g status-left ' #S '
-set -g status-left-length 15
-set -g status-left-style fg=colour229,bg=colour166
-# window list
-set -g window-status-format "#[fg=colour8] #I #[fg=colour231]#W#[fg=colour166]#F "
-set -g window-status-current-format "#[fg=colour117,bg=colour31] #I #[fg=colour231]#W#[fg=colour234]#F "
-set -g window-status-separator ""
+# # status bar
+# set -g status-style fg=colour8,bg=colour234
+# # current session
+# set -g status-left ' #S '
+# set -g status-left-length 15
+# set -g status-left-style fg=colour229,bg=colour166
+# # window list
+# set -g window-status-format "#[fg=colour8] #I #[fg=colour231]#W#[fg=colour166]#F "
+# set -g window-status-current-format "#[fg=colour117,bg=colour31] #I #[fg=colour231]#W#[fg=colour234]#F "
+# set -g window-status-separator ""
+
+setenv -g SHOW_DIRECTORY_NAME 1
 
 # disable possibly set visual editor
 set-environment -gu GEM_EDITOR
 
-set-option -g default-command "bash --login"
 # load any local config
 if-shell "test -f $HOME/.tmux.conf.local "source $HOME/.tmux.conf.local
 
+set -g @plugin 'laktak/extrakto'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'shivamashtikar/tmux-onedark-theme'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'fcsonline/tmux-thumbs'
+
+run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+set -g @thumbs-command 'echo -n {} | pbcopy'
+set -g @thumbs-reverse enabled
+set -g @thumbs-unique enabled
+
+set -g @continuum-restore 'on'
+# set -g default-command "exec /bin/zsh -l"
+
 # source this file after changes
-bind R source-file ~/.tmux.conf
+bind R source-file ~/.tmux.conf \; display "Reloaded .tmux.conf file"
 
-# set -g @yank_action 'copy-pipe'
-
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
