--- a/.tmux_mac.conf
+++ b/.tmux_mac.conf
@@ -32,15 +32,12 @@ set-option -g renumber-windows on
 # This helps when exiting insert mode in Vim: http://superuser.com/a/252717/65504
 set -s escape-time 50
 
+# Copy to clipboard macOS
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 
 # enable for iTerm (Terminal.app doesn't have mouse support)
 set -g mouse on
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
-bind P paste-buffer
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
-
-
 
 set-option -g status-position top
 
