--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,12 +36,13 @@ set-option -g renumber-windows on
 set -s escape-time 50
 
 
+
 # enable for iTerm (Terminal.app doesn't have mouse support)
 set -g mouse on
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'copy'
 bind P paste-buffer
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'copy'
 
 
 
@@ -70,20 +71,21 @@ set-environment -gu GEM_EDITOR
 # load any local config
 if-shell "test -f $HOME/.tmux.conf.local "source $HOME/.tmux.conf.local
 
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'shivamashtikar/tmux-onedark-theme'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'fcsonline/tmux-thumbs'
 
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
-set -g @thumbs-command 'echo -n {} | xclip'
+set -g @thumbs-command 'echo -n {} | copy'
 set -g @thumbs-reverse enabled
 set -g @thumbs-unique enabled
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
-# set -g default-command "exec /bin/zsh -l"
+set -g default-command "exec $(which zsh) -l"
 
 # source this file after changes
 bind R source-file ~/.tmux.conf \; display "Reloaded .tmux.conf file"
