--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,7 @@ bind-key -n M-N new-session -c "#{pane_current_path}"
 bind-key / next-layout
 # Quick view of processes
 bind-key h display-popup -E -h 95% -w 95% -x 5%  'htop'
+bind-key g display-popup -E -h 85% -w 54% -x C -y C 'watch -n 1 nvidia-smi'
 
 # Help screen: rebind list-keys window into a new pane
 bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
