--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,13 @@ set-option -g renumber-windows on
 set -s escape-time 50
 
 
+bind -n M-A display-popup -E -h 95% -w 95% -x 5% show-tmux-popup.sh
+# support detaching from nested session with the same shortcut
+bind -T popup M-A detach
+bind -T popup C-o copy-mode
+
+
+
 
 # enable for iTerm (Terminal.app doesn't have mouse support)
 # set -g mouse off
