added mouse scroll support to popup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,10 @@ bind -n M-A display-popup -E -h 95% -w 95% -x 5% show-tmux-popup.sh
 bind -T popup M-A detach
 bind -T popup C-o copy-mode
 
-
+# Enable mouse mode for the popup window
+bind -T popup MouseDown1Pane select-pane
+bind -T popup WheelUpPane if-shell -F -t = "#{?pane_in_mode,1,0}" "send-keys -t = -X scroll-up" "copy-mode -u"
+bind -T popup WheelDownPane if-shell -F -t = "#{?pane_in_mode,1,0}" "send-keys -t = -X scroll-down" "copy-mode"
 
 
 # enable for iTerm (Terminal.app doesn't have mouse support)
