--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,9 +37,15 @@ set-option -g renumber-windows on
 set -s escape-time 50
 
 
-bind -n M-A display-popup -E -h 95% -w 95% -x 5% show-tmux-popup.sh
-# support detaching from nested session with the same shortcut
+bind -n M-A display-popup -E -h 95% -w 95% -x 5% show-tmux-popup.sh popup1
 bind -T popup M-A detach
+
+bind -n M-S display-popup -E -h 95% -w 95% -x 5% show-tmux-popup.sh popup2
+bind -T popup M-S detach
+# bind -n M-A run-shell "sh ~/.tmux/show-tmux-popup.sh popup1"
+# bind -n M-B run-shell "sh ~/.tmux/show-tmux-popup.sh popup2"
+
+# support detaching from nested session with the same shortcut
 bind -T popup C-o copy-mode
 
 # Enable mouse mode for the popup window
