--- a/.pylintrc
+++ b/.pylintrc
@@ -1,6 +1,6 @@
 [MASTER]
 
-init-hook='import sys; sys.path.append("$HOME/.python"); sys.path.append("$HOME/.roma-scripts")'
+init-hook='import sys; sys.path.append("/home/vaden/.python"); sys.path.append("/home/vaden/.roma-scripts")'
 
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
@@ -11,9 +11,11 @@ extension-pkg-whitelist=torch
 # paths.
 ignore=CVS
 
+; ignore=node_modules,cdk.out,.pytest_cache,build,dist,.vscode,__pycache__,artifacts,data,demo,experiments,nanoGPT,old_code,distilgpt2-squad,bkup,plots,out,results,src_nano_gpt,wandb,weights_output
+
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
-ignore-patterns=
+ignore-patterns=**/node_modules,**/cdk.out,**/.pytest_cache,**/build,**/dist,**/.vscode,**/__pycache__,**/artifacts,**/data,**/demo,**/experiments,**/nanoGPT,**/old_code,**/distilgpt2-squad,**/bkup,**/plots,**/out,**/results,**/src_nano_gpt,**/wandb,**/weights_output
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
@@ -183,7 +185,7 @@ contextmanager-decorators=contextlib.contextmanager
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E1101 when accessed. Python regular
 # expressions are accepted.
-generated-members=numpy.*,torch.*,tensor
+generated-members=numpy.*,torch.*,tensor,pandas.*
 
 # Tells whether missing members accessed in mixin class should be ignored. A
 # mixin class is detected if its name ends with "mixin" (case insensitive).
