--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,7 @@ bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
 
 
 # syntax highlighting in Vim
+set -g terminal-overrides ",xterm-256color:Tc"  
 set -g default-terminal "screen-256color"
 # increase history limit
 set -g history-limit 10000
