--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,6 @@
 # gitmux: https://github.com/arl/gitmux
 
 
-
 # Create new panes and windows with current path
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
@@ -20,13 +19,15 @@ bind-key / next-layout
 # Quick view of processes
 bind-key h display-popup -E -h 95% -w 95% -x 5%  'htop'
 bind-key g display-popup -E -h 85% -w 54% -x C -y C 'watch -n 1 nvidia-smi'
+bind W run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
+
 
 # Help screen: rebind list-keys window into a new pane
 bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
 
 
 # syntax highlighting in Vim
-set -g terminal-overrides ",xterm-256color:Tc"  
+set -g terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "screen-256color"
 # increase history limit
 set -g history-limit 10000
