--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,9 @@ bind-key h display-popup -E -h 95% -w 95% -x 5%  'htop'
 bind-key g display-popup -E -h 85% -w 54% -x C -y C 'watch -n 1 nvidia-smi'
 bind W run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
 
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Help screen: rebind list-keys window into a new pane
 bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
