--- a/hx_config.toml
+++ b/hx_config.toml
@@ -63,7 +63,6 @@ S-down = "extend_line_down"
 C-S-up = "copy_selection_on_prev_line"
 C-S-down = "copy_selection_on_next_line"
 C-t = [":new", ":insert-output fzf-helix", ":theme default", "select_all", "split_selection_on_newline","goto_file", "goto_last_modified_file", ":buffer-close!", ":theme material_palenight"]
-# esc = 'keep_primary_selection'
 
 [keys.normal.space]
 q = ":quit"
@@ -80,6 +79,7 @@ S-right = "extend_char_right"
 S-left = "extend_char_left"
 S-up = "extend_line_up"
 S-down = "extend_line_down"
+C-t = [":insert-output fzf-helix"]
 # esc = 'keep_primary_selection'
 
 [keys.select]
@@ -96,4 +96,5 @@ A-right = "extend_next_word_start"
 A-left = "extend_prev_word_start"
 S-right = "extend_char_right"
 S-left = "extend_char_left"
+C-t = [":insert-output fzf-helix"]
 # esc = 'keep_primary_selection'
