Added npy preview, added insert filename to hx, tidied up setup.sh script

--- a/hx_config.toml
+++ b/hx_config.toml
@@ -77,7 +77,9 @@ S-right = "extend_char_right"
 S-left = "extend_char_left"
 S-up = "extend_line_up"
 S-down = "extend_line_down"
-# esc = 'keep_primary_selection'
+C-t = [":insert-output fzf-helix" ]
+#
+
 
 [keys.select]
 # y = [":clipboard-yank","yank"]
