--- a/.gitconfig
+++ b/.gitconfig
@@ -15,3 +15,5 @@
 	helper = cache --timeout=31536000
 [pull]
 	rebase = false
+[url "git@rnd-gitlab-ca-g.huawei.com:2222"]
+	insteadOf = https://gitlab.com/
