--- a/hx_config.toml
+++ b/hx_config.toml
@@ -44,8 +44,10 @@ S-up = "extend_line_up"
 S-down = "extend_line_down"
 C-S-up = "copy_selection_on_prev_line"
 C-S-down = "copy_selection_on_next_line"
-C-f = [":new", ":insert-output fzf-helix", ":theme default", "select_all", "split_selection_on_newline","goto_file", "goto_last_modified_file", ":buffer-close!", ":theme material_palenight"]
+C-t = [":new", ":insert-output fzf-helix", ":theme default", "select_all", "split_selection_on_newline","goto_file", "goto_last_modified_file", ":buffer-close!", ":theme material_palenight"]
 # esc = 'keep_primary_selection'
+C-i = [":insert-output ~/bin/fzf-helix"]
+
 
 [keys.normal.space]
 q = ":quit"
