--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ bind-key -n M-N new-session -c "#{pane_current_path}"
 # toggle
 bind-key / next-layout
 # Quick view of processes
-bind-key h display-popup -E -h 95% -w 95% -x 5%  'htop'
+bind-key h display-popup -E -h 95% -w 95% -x 5%  'htop --user=$(whoami) -t'
 bind-key g display-popup -E -h 95% -w 60% -x C -y C 'watch -n 1 nvidia-smi'
 bind W run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
 
