--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
 set -g terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "screen-256color"
 # increase history limit
-set -g history-limit 10000
+set -g history-limit 100000
 # start numbering windows from 1 instead of zero
 set -g base-index 1
 set-option -g renumber-windows on
@@ -58,6 +58,7 @@ bind -T popup WheelDownPane if-shell -F -t = "#{?pane_in_mode,1,0}" "send-keys -
 # enable for iTerm (Terminal.app doesn't have mouse support)
 # set -g mouse off
 set -g mouse on
+
 # bind-key -T vi-copy WheelUpPane scroll-up
 # bind-key -T vi-copy WheelDownPane scroll-down
 bind -T copy-mode-vi v send -X begin-selection
@@ -90,12 +91,13 @@ set-environment -gu GEM_EDITOR
 
 # load any local config
 if-shell "test -f $HOME/.tmux.conf.local "source $HOME/.tmux.conf.local
-
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'shivamashtikar/tmux-onedark-theme'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 set -g @thumbs-command 'echo -n {} | copy'
