tweaks tmux theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,10 +95,24 @@ if-shell "test -f $HOME/.tmux.conf.local "source $HOME/.tmux.conf.local
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
-set -g @plugin 'shivamashtikar/tmux-onedark-theme'
+# set -g @plugin 'shivamashtikar/tmux-onedark-theme'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+
+
+set -g @plugin 'dracula/tmux'
+
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon "#h | #S"
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon session
+set -g @dracula-military-time true
+set -g @dracula-git-no-repo-message "N/A"
+set -g @dracula-fixed-location "Vancouver"
+ 
+set -g @dracula-plugins "git weather time"
+
 
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 set -g @thumbs-command 'echo -n {} | copy'
