--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,20 +98,27 @@ set -g @plugin 'laktak/extrakto'
 # set -g @plugin 'shivamashtikar/tmux-onedark-theme'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
 
 
 set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "git weather time cpu-usage ram-usage gpu-usage gpu-ram-usage, gpu-power-draw"
 
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon "#h | #S"
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
-set -g @dracula-military-time true
+set -g @dracula-military-time false
 set -g @dracula-git-no-repo-message "N/A"
+set -g @dracula-show-fahrenheit false
 set -g @dracula-fixed-location "Vancouver"
- 
-set -g @dracula-plugins "git weather time"
+set -g @dracula-force-gpu "NVIDIA"
+set -g @dracula-show-network false
+set -g @dracula-cpu-display-load true
+set -g @dracula-cpu-usage true
+set -g @dracula-ram-usage true
+set -g @dracula-day-month true
+
 
 
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
