--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,7 +67,6 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'copy'
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'copy'
 
-
 set-option -g status-position top
 
 # enable clipboard  http://goo.gl/DN82E
@@ -102,20 +101,42 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 
 
 set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "git weather time cpu-usage ram-usage gpu-usage gpu-ram-usage, gpu-power-draw"
+set -g @dracula-plugins "powerline weather time cpu-usage ram-usage gpu-usage gpu-ram-usage, gpu-power-draw"
+set -g @dracula-show-powerline true
+# for left
+set -g @dracula-show-left-sep 
+# for right symbol (can set any symbol you like as separator)
+set -g @dracula-show-right-sep 
+
+
+# set -g @dracula-time-format "#(TZ=US/Pacific date +%%H:%%M) PST"
+set -g @dracula-time-format "#(TZ=US/Pacific date +'%%I:%%M%%P %%b %%d, %%Y') PST"
+# set -g @dracula-time-format "(#(TZ=US/Pacific date +%%H:%%M)P #(TZ=UTC date +%%H:%%M)Z) %Y-%m-%d %H:%M"
+# set -g @dracula-time-format "%F %R TZ=America/Los_Angeles"
+
+
+
+#    󰍛 󰘚 󰻟 󰻠
+# set -g @dracula-transparent-powerline-bg true
+# the left separator symbol is inversed with a transparent background, you can modify it with any symbol you like
+# set -g @dracula-inverse-divider 
+set -g @dracula-cpu-display-load true
+set -g @dracula-cpu-display-load true
+set -g @dracula-cpu-usage-label " "
+
+# set -g @dracula-show-ssh-session-port true
+# set -g @dracula-show-ssh-only-when-connected true
+
 
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon "#h | #S"
-set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
 set -g @dracula-military-time false
-set -g @dracula-git-no-repo-message "N/A"
+# set -g @dracula-git-no-repo-message "N/A"
 set -g @dracula-show-fahrenheit false
 set -g @dracula-fixed-location "Vancouver"
 set -g @dracula-force-gpu "NVIDIA"
 set -g @dracula-show-network false
-set -g @dracula-cpu-display-load true
-set -g @dracula-cpu-usage true
 set -g @dracula-ram-usage true
 set -g @dracula-day-month true
 
@@ -139,3 +160,4 @@ set-option -g automatic-rename-format '#{b:pane_current_path}'
 bind R source-file ~/.tmux.conf \; display "Reloaded .tmux.conf file"
 
 run '~/.tmux/plugins/tpm/tpm'
+
