commit to branch

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,8 +17,9 @@ bind-key -n M-N new-session -c "#{pane_current_path}"
 # toggle
 bind-key / next-layout
 # Quick view of processes
-bind-key h display-popup -E -h 95% -w 95% -x 5%  'htop'
-bind-key g display-popup -E -h 85% -w 54% -x C -y C 'watch -n 1 nvidia-smi'
+bind-key h display-popup -E -h 95% -w 95% -x 5% 'htop -t -u "$(whoami)" -p "$(pgrep -vfd, $HTOP_FILTER)"'
+
+bind-key g display-popup -E -h 95% -w 60% -x C -y C 'watch -n 1 nvidia-smi'
 bind W run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
 
 # Help screen: rebind list-keys window into a new pane
@@ -29,7 +30,7 @@ bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
 set -g terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "screen-256color"
 # increase history limit
-set -g history-limit 10000
+set -g history-limit 100000
 # start numbering windows from 1 instead of zero
 set -g base-index 1
 set-option -g renumber-windows on
@@ -58,13 +59,13 @@ bind -T popup WheelDownPane if-shell -F -t = "#{?pane_in_mode,1,0}" "send-keys -
 # enable for iTerm (Terminal.app doesn't have mouse support)
 # set -g mouse off
 set -g mouse on
+
 # bind-key -T vi-copy WheelUpPane scroll-up
 # bind-key -T vi-copy WheelDownPane scroll-down
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'copy'
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'copy'
-
 
 set-option -g status-position top
 
@@ -90,12 +91,56 @@ set-environment -gu GEM_EDITOR
 
 # load any local config
 if-shell "test -f $HOME/.tmux.conf.local "source $HOME/.tmux.conf.local
-
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
-set -g @plugin 'shivamashtikar/tmux-onedark-theme'
+# set -g @plugin 'shivamashtikar/tmux-onedark-theme'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'fcsonline/tmux-thumbs'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
+
+
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "powerline weather time cpu-usage ram-usage gpu-usage gpu-ram-usage, gpu-power-draw"
+set -g @dracula-show-powerline true
+# for left
+set -g @dracula-show-left-sep 
+# for right symbol (can set any symbol you like as separator)
+set -g @dracula-show-right-sep 
+
+
+# set -g @dracula-time-format "#(TZ=US/Pacific date +%%H:%%M) PST"
+set -g @dracula-time-format "#(TZ=US/Pacific date +'%%I:%%M%%P %%b %%d, %%Y') PST"
+# set -g @dracula-time-format "(#(TZ=US/Pacific date +%%H:%%M)P #(TZ=UTC date +%%H:%%M)Z) %Y-%m-%d %H:%M"
+# set -g @dracula-time-format "%F %R TZ=America/Los_Angeles"
+
+
+
+#    󰍛 󰘚 󰻟 󰻠
+# set -g @dracula-transparent-powerline-bg true
+# the left separator symbol is inversed with a transparent background, you can modify it with any symbol you like
+# set -g @dracula-inverse-divider 
+set -g @dracula-cpu-display-load true
+set -g @dracula-cpu-display-load true
+set -g @dracula-cpu-usage-label " "
+
+# set -g @dracula-show-ssh-session-port true
+# set -g @dracula-show-ssh-only-when-connected true
+
+
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon "#h | #S"
+set -g @dracula-show-left-icon session
+set -g @dracula-military-time false
+# set -g @dracula-git-no-repo-message "N/A"
+set -g @dracula-show-fahrenheit false
+set -g @dracula-fixed-location "Vancouver"
+set -g @dracula-force-gpu "NVIDIA"
+set -g @dracula-show-network false
+set -g @dracula-ram-usage true
+set -g @dracula-day-month true
+
+
 
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 set -g @thumbs-command 'echo -n {} | copy'
@@ -115,3 +160,4 @@ set-option -g automatic-rename-format '#{b:pane_current_path}'
 bind R source-file ~/.tmux.conf \; display "Reloaded .tmux.conf file"
 
 run '~/.tmux/plugins/tpm/tpm'
+
