tmux copy tweaks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,10 @@ bind -T popup WheelDownPane if-shell -F -t = "#{?pane_in_mode,1,0}" "send-keys -
 # set -g mouse off
 set -g mouse on
 
+set -s set-clipboard on
+set -g allow-passthrough
+
+
 # bind-key -T vi-copy WheelUpPane scroll-up
 # bind-key -T vi-copy WheelDownPane scroll-down
 bind -T copy-mode-vi v send -X begin-selection
@@ -79,7 +83,7 @@ set-option -g set-titles on
 set-option -g set-titles-string 'tmux - #W'
 set -g bell-action any
 set-option -g visual-bell off
-set-option -g set-clipboard off
+# set-option -g set-clipboard off
 setw -g mode-keys vi
 setw -g monitor-activity on
 set -g visual-activity on
