--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,6 @@ bind-key -n M-/ split-window -v -c "#{pane_current_path}"
 bind-key -n M-n new-window -c "#{pane_current_path}"
 bind-key -n M-N new-session -c "#{pane_current_path}"
 
-
 # toggle
 bind-key / next-layout
 # Quick view of processes
@@ -28,8 +27,9 @@ bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
 
 
 # syntax highlighting in Vim
-set -g terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "screen-256color"
+# set -g terminal-overrides ",xterm-256color:Tc"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 # increase history limit
 set -g history-limit 100000
 # start numbering windows from 1 instead of zero
