--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,7 +87,7 @@ set-option -g visual-bell off
 setw -g mode-keys vi
 setw -g monitor-activity on
 set -g visual-activity on
-set -g status-interval 1
+set -g status-interval 2
 
 setenv -g SHOW_DIRECTORY_NAME 1
 
@@ -104,48 +104,73 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'fcsonline/tmux-thumbs'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 
+# Detect if we're running remotely via SSH
+if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
+    # Remote configuration (Ubuntu with GPU)
+    set -g @plugin 'dracula/tmux'
+    set -g @dracula-plugins "synchronize cpu-usage ram-usage gpu-usage gpu-ram-usage gpu-power-draw"
+    set -g @dracula-show-powerline true
 
-set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "powerline weather time cpu-usage ram-usage gpu-usage gpu-ram-usage, gpu-power-draw"
-set -g @dracula-show-powerline true
-# for left
-set -g @dracula-show-left-sep 
-# for right symbol (can set any symbol you like as separator)
-set -g @dracula-show-right-sep 
+    # Remote icon (server) + session name
+    set -g @dracula-show-left-icon "󰒋"
 
+    # GPU-specific settings for remote
+    set -g @dracula-gpu-usage-label "󰢮"
+    set -g @dracula-gpu-usage true
+    set -g @dracula-gpu-ram-usage true
+    set -g @dracula-gpu-power-draw true
 
-# set -g @dracula-time-format "#(TZ=US/Pacific date +%%H:%%M) PST"
-set -g @dracula-time-format "#(TZ=US/Pacific date +'%%I:%%M%%P %%b %%d, %%Y') PST"
-# set -g @dracula-time-format "(#(TZ=US/Pacific date +%%H:%%M)P #(TZ=UTC date +%%H:%%M)Z) %Y-%m-%d %H:%M"
-# set -g @dracula-time-format "%F %R TZ=America/Los_Angeles"
+    # Synchronize indicator settings
+    set -g @dracula-synchronize-label "󰓦"
+    set -g @dracula-synchronize-indicator "sync"
 
+    # Custom status items - append to dracula's status
+    set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/bin/system_info cpu)#[fg=magenta]#($HOME/bin/system_info gpu)"
+    set -g @dracula-plugins "#{@dracula-plugins} custom"
+} {
+    # Local configuration (MacBook)
+    set -g @plugin 'dracula/tmux'
+    set -g @dracula-plugins "synchronize cpu-usage ram-usage battery weather"
+    set -g @dracula-show-powerline true
 
+    # Local icon (laptop) + session name
+    set -g @dracula-show-left-icon "󰌢"
 
-#    󰍛 󰘚 󰻟 󰻠
-# set -g @dracula-transparent-powerline-bg true
-# the left separator symbol is inversed with a transparent background, you can modify it with any symbol you like
-# set -g @dracula-inverse-divider 
+    # Synchronize indicator settings
+    set -g @dracula-synchronize-label "󰓦"
+    set -g @dracula-synchronize-indicator "sync"
+
+    # Battery settings
+    set -g @dracula-battery-label "󰁹"
+    set -g @dracula-battery-colors "dark_purple white"
+    set -g @dracula-battery-style "percentage"
+    set -g @dracula-show-battery-percentage true
+
+    # Weather settings
+    set -g @dracula-weather-icon "󰖕"
+    set -g @dracula-fixed-location "Vancouver"
+    set -g @dracula-show-fahrenheit false
+    set -g @dracula-show-location true
+}
+
+# Shared settings for both environments
+# CPU and RAM display settings
+set -g @dracula-cpu-usage-label "󰻠"
 set -g @dracula-cpu-display-load true
-set -g @dracula-cpu-display-load true
-set -g @dracula-cpu-usage-label " "
+set -g @dracula-cpu-usage-colors "dark_gray white"
+set -g @dracula-show-cpu-usage true
 
-# set -g @dracula-show-ssh-session-port true
-# set -g @dracula-show-ssh-only-when-connected true
-
-
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon "#h | #S"
-set -g @dracula-show-left-icon session
-set -g @dracula-military-time false
-# set -g @dracula-git-no-repo-message "N/A"
-set -g @dracula-show-fahrenheit false
-set -g @dracula-fixed-location "Vancouver"
-set -g @dracula-force-gpu "NVIDIA"
-set -g @dracula-show-network false
+set -g @dracula-ram-usage-label "󰍛"
 set -g @dracula-ram-usage true
-set -g @dracula-day-month true
+set -g @dracula-ram-usage-colors "dark_purple white"
+set -g @dracula-show-ram-usage true
 
-
+# Common visual settings
+set -g @dracula-show-left-sep ""
+set -g @dracula-show-right-sep ""
+set -g @dracula-show-flags false
+set -g @dracula-refresh-rate 2
+set -g @dracula-border-contrast true
 
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 set -g @thumbs-command 'echo -n {} | copy'
@@ -165,4 +190,12 @@ set-option -g automatic-rename-format '#{b:pane_current_path}'
 bind R source-file ~/.tmux.conf \; display "Reloaded .tmux.conf file"
 
 run '~/.tmux/plugins/tpm/tpm'
+
+# Alternative icons if you prefer:
+# CPU: 󰘚 or  or
+# RAM:  or  or 󰆼
+# GPU: 󰾲 or  or
+# Weather:  or  or
+# Time:  or  or
+# Power:  or  or
 
