--- a/.tmux.conf
+++ b/.tmux.conf
@@ -108,25 +108,25 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     # Remote configuration (Ubuntu with GPU)
     set -g @plugin 'dracula/tmux'
-    set -g @dracula-plugins "synchronize cpu-usage ram-usage gpu-usage gpu-ram-usage gpu-power-draw"
+
+    # Check if nvidia-smi is available for GPU metrics
+    if-shell "command -v nvidia-smi" {
+        set -g @dracula-plugins "synchronize cpu-usage ram-usage gpu-usage gpu-ram-usage gpu-power-draw"
+        set -g @dracula-gpu-usage-label "󰢮"
+        set -g @dracula-gpu-usage true
+        set -g @dracula-gpu-ram-usage true
+        set -g @dracula-gpu-power-draw true
+        set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/bin/system_info cpu)#[fg=magenta]#($HOME/bin/system_info gpu)"
+    } {
+        # Fallback for remote systems without GPU
+        set -g @dracula-plugins "synchronize cpu-usage ram-usage"
+        set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/bin/system_info cpu)"
+    }
+
     set -g @dracula-show-powerline true
-
-    # Remote icon (server) + session name
     set -g @dracula-show-left-icon "󰒋"
-
-    # GPU-specific settings for remote
-    set -g @dracula-gpu-usage-label "󰢮"
-    set -g @dracula-gpu-usage true
-    set -g @dracula-gpu-ram-usage true
-    set -g @dracula-gpu-power-draw true
-
-    # Synchronize indicator settings
     set -g @dracula-synchronize-label "󰓦"
     set -g @dracula-synchronize-indicator "sync"
-
-    # Custom status items - append to dracula's status
-    set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/bin/system_info cpu)#[fg=magenta]#($HOME/bin/system_info gpu)"
-    set -g @dracula-plugins "#{@dracula-plugins} custom"
 } {
     # Local configuration (MacBook)
     set -g @plugin 'dracula/tmux'
