--- a/.tmux.conf
+++ b/.tmux.conf
@@ -104,6 +104,68 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'fcsonline/tmux-thumbs'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 
+
+# set -g @dracula-colors "
+# # Dracula Color Pallette
+# white='#f8f8f2'
+# gray='#44475a'
+# dark_gray='#282a36'
+# light_purple='#bd93f9'
+# dark_purple='#6272a4'
+# cyan='#8be9fd'
+# green='#50fa7b'
+# orange='#ffb86c'
+# red='#ff5555'
+# pink='#ff79c6'
+# yellow='#f1fa8c'
+# "
+
+set -g @dracula-colors "
+foreground='#ffffff'
+background='#002451'
+highlight='#003f8e'
+status_line='#00346e'
+comment='#7285b7'
+red='#ff9da4'
+orange='#ffc58f'
+yellow='#ffeead'
+green='#d1f1a9'
+aqua='#99ffff'
+blue='#bbdaff'
+purple='#ebbbff'
+pane='#4d5057'
+"
+
+# set -g @dracula-attached-clients-colors "cyan dark_gray"
+# set -g @dracula-battery-colors "pink dark_gray"
+# set -g @dracula-continuum-colors "cyan dark_gray"
+# set -g @dracula-cpu-usage-colors "orange dark_gray"
+# set -g @dracula-custom-plugin-colors "cyan dark_gray"
+# set -g @dracula-cwd-colors "dark_gray white"
+# set -g @dracula-fossil-colors "green dark_gray"
+# set -g @dracula-git-colors "green dark_gray"
+# set -g @dracula-gpu-power-draw-colors "green dark_gray"
+# set -g @dracula-gpu-ram-usage-colors "cyan dark_gray"
+# set -g @dracula-gpu-usage-colors "pink dark_gray"
+# set -g @dracula-hg-colors "green dark_gray"
+# set -g @dracula-kubernetes-context-colors "cyan dark_gray"
+# set -g @dracula-libre-colors "white dark_gray"
+# set -g @dracula-mpc-colors "green dark_gray"
+# set -g @dracula-network-bandwidth-colors "cyan dark_gray"
+# set -g @dracula-network-colors "cyan dark_gray"
+# set -g @dracula-network-ping-colors "cyan dark_gray"
+# set -g @dracula-network-vpn-colors "cyan dark_gray"
+# set -g @dracula-playerctl-colors "green dark_gray"
+# set -g @dracula-ram-usage-colors "cyan dark_gray"
+# set -g @dracula-spotify-tui-colors "green dark_gray"
+# set -g @dracula-ssh-session-colors "green dark_gray"
+# set -g @dracula-synchronize-panes-colors "cyan dark_gray"
+# set -g @dracula-terraform-colors "light_purple dark_gray"
+# set -g @dracula-time-colors "dark_purple white"
+# set -g @dracula-tmux-ram-usage-colors "cyan dark_gray"
+# set -g @dracula-weather-colors "orange dark_gray"
+
+
 # Detect if we're running remotely via SSH
 if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     # Remote configuration (Ubuntu with GPU)
@@ -111,16 +173,25 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "synchronize cpu-usage ram-usage gpu-usage gpu-ram-usage gpu-power-draw"
+        set -g @dracula-plugins "cpu-usage gpu-usage gpu-ram-usage gpu-power-draw custom"
+        # set -g @dracula-plugins "cpu-usage gpu-usage gpu-ram-usage gpu-power-draw custom"
         set -g @dracula-gpu-usage-label "󰢮"
         set -g @dracula-gpu-usage true
         set -g @dracula-gpu-ram-usage true
         set -g @dracula-gpu-power-draw true
-        set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/bin/system_info cpu)#[fg=magenta]#($HOME/bin/system_info gpu)"
+
+        # Custom scripts for additional system info
+        set -g @dracula-cpu-usage-colors "cyan dark_gray"
+        set -g @dracula-gpu-usage-colors "magenta dark_gray"
+        set -g @dracula-custom-commands "cpu_info gpu_info"
+        set -g @dracula-custom-command-cpu_info "#($HOME/dotfiles/system_info.sh cpu)"
+        set -g @dracula-custom-command-gpu_info "#($HOME/dotfiles/system_info.sh gpu)"
+        set -g @dracula-custom-label-cpu_info "󰻠"
+        set -g @dracula-custom-label-gpu_info "󰢮"
     } {
         # Fallback for remote systems without GPU
         set -g @dracula-plugins "synchronize cpu-usage ram-usage"
-        set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/bin/system_info cpu)"
+        set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/dotfiles/system_info.sh cpu)"
     }
 
     set -g @dracula-show-powerline true
@@ -166,6 +237,10 @@ set -g @dracula-ram-usage-colors "dark_purple white"
 set -g @dracula-show-ram-usage true
 
 # Common visual settings
+# set -g @dracula-show-right-sep "█"
+set -g @dracula-show-right-sep "#[fg=dark_gray]"
+
+
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
 set -g @dracula-show-flags false
