--- a/.tmux.conf
+++ b/.tmux.conf
@@ -229,7 +229,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     }
 
     set -g @dracula-show-powerline true
-    set -g @dracula-show-left-icon "󰒋"
+    set -g @dracula-show-left-icon "󰄛"
     set -g @dracula-synchronize-label "󰓦"
     set -g @dracula-synchronize-indicator "sync"
 } {
@@ -239,7 +239,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     set -g @dracula-show-powerline true
 
     # Local icon (laptop) + session name
-    set -g @dracula-show-left-icon "󰌢"
+    set -g @dracula-show-left-icon ""
 
     # Synchronize indicator settings
     set -g @dracula-synchronize-label "󰓦"
