tweaks to tmux/p10k

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -177,25 +177,27 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "cpu-usage gpu-usage gpu-ram-usage gpu-power-draw custom"
+        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session"
         # set -g @dracula-plugins "cpu-usage gpu-usage gpu-ram-usage gpu-power-draw custom"
         set -g @dracula-gpu-usage-label "󰢮"
         set -g @dracula-gpu-usage true
         set -g @dracula-gpu-ram-usage true
-        set -g @dracula-gpu-power-draw true
+        # set -g @dracula-gpu-power-draw true
+
 
         # Custom scripts for additional system info
         set -g @dracula-cpu-usage-colors "cyan dark_gray"
         set -g @dracula-gpu-usage-colors "magenta dark_gray"
         set -g @dracula-custom-commands "cpu_info gpu_info"
-        set -g @dracula-custom-command-cpu_info "#($HOME/dotfiles/system_info.sh cpu)"
-        set -g @dracula-custom-command-gpu_info "#($HOME/dotfiles/system_info.sh gpu)"
-        set -g @dracula-custom-label-cpu_info "󰻠"
-        set -g @dracula-custom-label-gpu_info "󰢮"
+        # set -g @dracula-custom-command-cpu_info "#($HOME/dotfiles/system_info.sh cpu)"
+        # set -g @dracula-custom-command-gpu_info "#($HOME/dotfiles/system_info.sh gpu)"
+        # set -g @dracula-custom-label-cpu_info "󰻠"
+        # set -g @dracula-custom-label-gpu_info "󰢮""
+        
     } {
         # Fallback for remote systems without GPU
-        set -g @dracula-plugins "synchronize cpu-usage ram-usage"
-        set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/dotfiles/system_info.sh cpu)"
+        set -g @dracula-plugins "synchronize cpu-usage ram-usage ssh-session"
+        # set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/dotfiles/system_info.sh cpu)"
     }
 
     set -g @dracula-show-powerline true
