--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -177,7 +177,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session"
+        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth network"
         # set -g @dracula-plugins "cpu-usage gpu-usage gpu-ram-usage gpu-power-draw custom"
         set -g @dracula-gpu-usage-label "󰢮"
         set -g @dracula-gpu-usage true
@@ -196,7 +196,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
         
     } {
         # Fallback for remote systems without GPU
-        set -g @dracula-plugins "synchronize cpu-usage ram-usage ssh-session"
+        set -g @dracula-plugins "synchronize cpu-usage ram-usage ssh-session network-bandwidth network"
         # set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/dotfiles/system_info.sh cpu)"
     }
 
@@ -223,6 +223,8 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     set -g @dracula-battery-style "percentage"
     set -g @dracula-show-battery-percentage true
 
+    set -g @dracula-cpu-usage-colors "pink dark_gray"
+
     # Weather settings
     set -g @dracula-weather-icon "󰖕"
     set -g @dracula-fixed-location "Vancouver"
@@ -230,6 +232,8 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     set -g @dracula-show-location true
 }
 
+
+set -g @dracula-network-bandwidth-interval 10
 # Shared settings for both environments
 # CPU and RAM display settings
 set -g @dracula-cpu-usage-label "󰻠"
