temp remove widget w/ broken colours

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -177,18 +177,19 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth network"
+        set -g @dracula-plugins "cpu-usage ram-usage gpu-ram-usage ssh-session network-bandwidth network"
+        # set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth network"
         # set -g @dracula-plugins "cpu-usage gpu-usage gpu-ram-usage gpu-power-draw custom"
-        set -g @dracula-gpu-usage-label "󰢮"
-        set -g @dracula-gpu-usage true
-        set -g @dracula-gpu-ram-usage true
+        # set -g @dracula-gpu-usage-label "󰢮"
+        # set -g @dracula-gpu-usage true
+        # set -g @dracula-gpu-ram-usage true
         # set -g @dracula-gpu-power-draw true
 
 
         # Custom scripts for additional system info
         set -g @dracula-cpu-usage-colors "cyan dark_gray"
         set -g @dracula-gpu-usage-colors "magenta dark_gray"
-        set -g @dracula-custom-commands "cpu_info gpu_info"
+        # set -g @dracula-custom-commands "cpu_info gpu_info"
         # set -g @dracula-custom-command-cpu_info "#($HOME/dotfiles/system_info.sh cpu)"
         # set -g @dracula-custom-command-gpu_info "#($HOME/dotfiles/system_info.sh gpu)"
         # set -g @dracula-custom-label-cpu_info "󰻠"
@@ -232,6 +233,11 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     set -g @dracula-show-location true
 }
 
+# Common visual settings
+# set -g @dracula-show-right-sep "#[fg=background]"
+# set -g @dracula-show-left-sep "#[fg=background]"
+# set -g @dracula-show-right-sep "#[fg=#002451]"
+# set -g @dracula-show-left-sep ""
 
 set -g @dracula-network-bandwidth-interval 10
 # Shared settings for both environments
@@ -248,7 +254,7 @@ set -g @dracula-show-ram-usage true
 
 # Common visual settings
 # set -g @dracula-show-right-sep "█"
-set -g @dracula-show-right-sep "#[fg=dark_gray]"
+# set -g @dracula-show-right-sep "#[fg=dark_gray]"
 
 
 set -g @dracula-show-left-sep ""
